# PGGAN

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
pggan/: data.py  layers.py
pggan/models/: __init__.py  discriminator.py  generator.py  layers.py  utils.py
pggan/tests/: test_discriminator.py  test_e2e.py  test_generator.py
