[tool.poetry]
name = "pggan"
version = "0.1.0"
description = "TensorFlow implementation of Progressive Growing of GANs"
authors = ["Soumik Rakshit <19soumik.rakshit96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
wandb = "^0.15.2"
black = "^23.3.0"
pytest = "^7.3.1"
tensorflow-datasets = "^4.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
